# polymarket-arbitrage-trading-bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SKILL.md  SPECS.md  build.sh  cli_dashboard.py  config.py  dashboard_bridge.py  derive_keys.py  fetch_balance.py  main.py  pyproject.toml  requirements.txt  start.sh  start_windows.ps1  test_auth.py
.agent/skills/agents-rules/: SKILL.md
.agent/skills/architecture/: SKILL.md
.agent/skills/backend/: SKILL.md
.agent/skills/codebase-map/: SKILL.md
.agent/skills/decisions-log/: SKILL.md
.agent/skills/frontend/: SKILL.md
.agent/skills/philosophy/: SKILL.md
.github/: FUNDING.yml
core/: binance_ws.py  dump_hedge_detector.py  edge_detector.py  polymarket_client.py  polymarket_ws.py
frontend/: package-lock.json  package.json
frontend/prisma/: seed.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/live/: route.ts
frontend/src/app/audit/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/layouts/: DashboardLayout.tsx
frontend/src/components/shared/: GlassCard.tsx  PageHeader.tsx
frontend/src/hooks/: useLiveState.ts
integration/: telegram.py
risk/: kelly.py  risk_manager.py
scratch/: test_balance.py
trading-core/: CMakeLists.txt  build.sh  conanfile.txt
trading-core/src/: main.cpp  test_phase4.cpp
trading-core/src/control/: LiveStateServer.cpp  LiveStateServer.h
trading-core/src/exec/: EIP712Signer.cpp  EIP712Signer.h  OrderRouter.cpp  OrderRouter.h
trading-core/src/feeds/: BinanceFeed.cpp  BinanceFeed.h  GammaClient.cpp  GammaClient.h  PolymarketFeed.cpp  PolymarketFeed.h
trading-core/src/risk/: RiskManager.cpp  RiskManager.h
trading-core/src/signals/: DumpHedgeDetector.cpp  DumpHedgeDetector.h  LatencyArbDetector.cpp  LatencyArbDetector.h  Signal.h  SignalEngine.cpp  SignalEngine.h
trading-core/src/state/: StateStore.cpp  StateStore.h
utils/: dashboard.py  logger.py  retry.py
